dart/cpp/public/filament-dart.h

typedef struct Engine *EngineRef;
typedef struct LightManager *LightManagerRef;
typedef struct Material *MaterialRef;
typedef struct MaterialInstance *MaterialInstanceRef;
float               filament_light_manager_get_falloff(LightManagerRef lightManager, int entityInstance);
void                filament_light_manager_set_spotlight_cone(LightManagerRef lightManager, int entityInstance, float inner, float outer);
void                filament_light_manager_set_sun_angular_radius(LightManagerRef lightManager, int entityInstance, float angularRadius);
float               filament_light_manager_get_sun_angular_radius(LightManagerRef lightManager, int entityInstance);
void                filament_light_manager_set_sun_halo_size(LightManagerRef lightManager, int entityInstance, float haloSize);
float               filament_light_manager_get_sun_halo_size(LightManagerRef lightManager, int entityInstance);
void                filament_light_manager_set_sun_halo_falloff(LightManagerRef lightManager, int entityInstance, float haloFalloff);
float               filament_light_manager_get_sun_halo_falloff(LightManagerRef lightManager, int entityInstance);
void                filament_light_manager_set_shadow_caster(LightManagerRef lightManager, int entityInstance, int castShadows);
int                 filament_light_manager_get_shadow_caster(LightManagerRef lightManager, int entityInstance);
float               filament_light_manager_get_outer_cone_angle(LightManagerRef lightManager, int entityInstance);
float               filament_light_manager_get_inner_cone_angle(LightManagerRef ligthManager, int entityInstance);
///
/// Material
///
MaterialRef         filament_engine_create_material_from_payload(EngineRef engine, void* data, int dataLen);
MaterialInstanceRef filament_material_get_default_instance(MaterialRef material);
MaterialInstanceRef filament_material_create_instance(MaterialRef material);
MaterialInstanceRef filament_material_create_instance_with_name(MaterialRef material, const char* name);
const char*         filament_material_get_name(MaterialRef material);
int                 filament_material_get_shading(MaterialRef material);
int                 filament_material_get_interpolation(MaterialRef material);
int                 filament_material_get_blending_mode(MaterialRef material);
int                 filament_material_get_refraction_mode(MaterialRef material);