dart/filament/lib/src/generated/native_gen.dart


  late final _filament_light_manager_get_falloffPtr = _lookup<
          ffi.NativeFunction<ffi.Float Function(LightManagerRef, ffi.Int32)>>(
      'filament_light_manager_get_falloff');
  late final _filament_light_manager_get_falloff =
      _filament_light_manager_get_falloffPtr
          .asFunction<double Function(LightManagerRef, int)>();

  void filament_light_manager_set_spotlight_cone(
    LightManagerRef lightManager,
    int entityInstance,
    double inner,
    double outer,
  ) {
    return _filament_light_manager_set_spotlight_cone(
      lightManager,
      entityInstance,
      inner,
      outer,
    );
  }

  late final _filament_light_manager_set_spotlight_conePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(LightManagerRef, ffi.Int32, ffi.Float,
              ffi.Float)>>('filament_light_manager_set_spotlight_cone');
  late final _filament_light_manager_set_spotlight_cone =
      _filament_light_manager_set_spotlight_conePtr
          .asFunction<void Function(LightManagerRef, int, double, double)>();

  void filament_light_manager_set_sun_angular_radius(
    LightManagerRef lightManager,
    int entityInstance,
    double angularRadius,
  ) {
    return _filament_light_manager_set_sun_angular_radius(
      lightManager,
      entityInstance,
      angularRadius,
    );
  }

  late final _filament_light_manager_set_sun_angular_radiusPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(LightManagerRef, ffi.Int32,
              ffi.Float)>>('filament_light_manager_set_sun_angular_radius');
  late final _filament_light_manager_set_sun_angular_radius =
      _filament_light_manager_set_sun_angular_radiusPtr
          .asFunction<void Function(LightManagerRef, int, double)>();

  double filament_light_manager_get_sun_angular_radius(
    LightManagerRef lightManager,
    int entityInstance,
  ) {
    return _filament_light_manager_get_sun_angular_radius(
      lightManager,
      entityInstance,
    );
  }

  late final _filament_light_manager_get_sun_angular_radiusPtr = _lookup<
          ffi.NativeFunction<ffi.Float Function(LightManagerRef, ffi.Int32)>>(
      'filament_light_manager_get_sun_angular_radius');
  late final _filament_light_manager_get_sun_angular_radius =
      _filament_light_manager_get_sun_angular_radiusPtr
          .asFunction<double Function(LightManagerRef, int)>();

  void filament_light_manager_set_sun_halo_size(
    LightManagerRef lightManager,
    int entityInstance,
    double haloSize,
  ) {
    return _filament_light_manager_set_sun_halo_size(
      lightManager,
      entityInstance,
      haloSize,
    );
  }

  late final _filament_light_manager_set_sun_halo_sizePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(LightManagerRef, ffi.Int32,
              ffi.Float)>>('filament_light_manager_set_sun_halo_size');
  late final _filament_light_manager_set_sun_halo_size =
      _filament_light_manager_set_sun_halo_sizePtr
          .asFunction<void Function(LightManagerRef, int, double)>();

  double filament_light_manager_get_sun_halo_size(
    LightManagerRef lightManager,
    int entityInstance,
  ) {
    return _filament_light_manager_get_sun_halo_size(
      lightManager,
      entityInstance,
    );
  }

  late final _filament_light_manager_get_sun_halo_sizePtr = _lookup<
          ffi.NativeFunction<ffi.Float Function(LightManagerRef, ffi.Int32)>>(
      'filament_light_manager_get_sun_halo_size');
  late final _filament_light_manager_get_sun_halo_size =
      _filament_light_manager_get_sun_halo_sizePtr
          .asFunction<double Function(LightManagerRef, int)>();

  void filament_light_manager_set_sun_halo_falloff(
    LightManagerRef lightManager,
    int entityInstance,
    double haloFalloff,
  ) {
    return _filament_light_manager_set_sun_halo_falloff(
      lightManager,
      entityInstance,
      haloFalloff,
    );
  }

  late final _filament_light_manager_set_sun_halo_falloffPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(LightManagerRef, ffi.Int32,
              ffi.Float)>>('filament_light_manager_set_sun_halo_falloff');
  late final _filament_light_manager_set_sun_halo_falloff =
      _filament_light_manager_set_sun_halo_falloffPtr
          .asFunction<void Function(LightManagerRef, int, double)>();

  double filament_light_manager_get_sun_halo_falloff(
    LightManagerRef lightManager,
    int entityInstance,
  ) {
    return _filament_light_manager_get_sun_halo_falloff(
      lightManager,
      entityInstance,
    );
  }

  late final _filament_light_manager_get_sun_halo_falloffPtr = _lookup<
          ffi.NativeFunction<ffi.Float Function(LightManagerRef, ffi.Int32)>>(
      'filament_light_manager_get_sun_halo_falloff');
  late final _filament_light_manager_get_sun_halo_falloff =
      _filament_light_manager_get_sun_halo_falloffPtr
          .asFunction<double Function(LightManagerRef, int)>();

  void filament_light_manager_set_shadow_caster(
    LightManagerRef lightManager,
    int entityInstance,
    int castShadows,
  ) {
    return _filament_light_manager_set_shadow_caster(
      lightManager,
      entityInstance,
      castShadows,
    );
  }

  late final _filament_light_manager_set_shadow_casterPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(LightManagerRef, ffi.Int32,
              ffi.Int32)>>('filament_light_manager_set_shadow_caster');
  late final _filament_light_manager_set_shadow_caster =
      _filament_light_manager_set_shadow_casterPtr
          .asFunction<void Function(LightManagerRef, int, int)>();

  int filament_light_manager_get_shadow_caster(
    LightManagerRef lightManager,
    int entityInstance,
  ) {
    return _filament_light_manager_get_shadow_caster(
      lightManager,
      entityInstance,
    );
  }

  late final _filament_light_manager_get_shadow_casterPtr = _lookup<
          ffi.NativeFunction<ffi.Int32 Function(LightManagerRef, ffi.Int32)>>(
      'filament_light_manager_get_shadow_caster');
  late final _filament_light_manager_get_shadow_caster =
      _filament_light_manager_get_shadow_casterPtr
          .asFunction<int Function(LightManagerRef, int)>();

  double filament_light_manager_get_outer_cone_angle(
    LightManagerRef lightManager,
    int entityInstance,
  ) {
    return _filament_light_manager_get_outer_cone_angle(
      lightManager,
      entityInstance,
    );
  }

  late final _filament_light_manager_get_outer_cone_anglePtr = _lookup<
          ffi.NativeFunction<ffi.Float Function(LightManagerRef, ffi.Int32)>>(
      'filament_light_manager_get_outer_cone_angle');
  late final _filament_light_manager_get_outer_cone_angle =
      _filament_light_manager_get_outer_cone_anglePtr
          .asFunction<double Function(LightManagerRef, int)>();

  double filament_light_manager_get_inner_cone_angle(
    LightManagerRef ligthManager,
    int entityInstance,
  ) {
    return _filament_light_manager_get_inner_cone_angle(
      ligthManager,
      entityInstance,
    );
  }

  late final _filament_light_manager_get_inner_cone_anglePtr = _lookup<
          ffi.NativeFunction<ffi.Float Function(LightManagerRef, ffi.Int32)>>(
      'filament_light_manager_get_inner_cone_angle');
  late final _filament_light_manager_get_inner_cone_angle =
      _filament_light_manager_get_inner_cone_anglePtr
          .asFunction<double Function(LightManagerRef, int)>();

  /// Material
  MaterialRef filament_engine_create_material_from_payload(
    EngineRef engine,
    ffi.Pointer<ffi.Void> data,
    int dataLen,
  ) {
    return _filament_engine_create_material_from_payload(
      engine,
      data,
      dataLen,
    );
  }

  late final _filament_engine_create_material_from_payloadPtr = _lookup<
      ffi.NativeFunction<
          MaterialRef Function(EngineRef, ffi.Pointer<ffi.Void>,
              ffi.Int32)>>('filament_engine_create_material_from_payload');
  late final _filament_engine_create_material_from_payload =
      _filament_engine_create_material_from_payloadPtr.asFunction<
          MaterialRef Function(EngineRef, ffi.Pointer<ffi.Void>, int)>();

  MaterialInstanceRef filament_material_get_default_instance(
    MaterialRef material,
  ) {
    return _filament_material_get_default_instance(
      material,
    );
  }

  late final _filament_material_get_default_instancePtr =
      _lookup<ffi.NativeFunction<MaterialInstanceRef Function(MaterialRef)>>(
          'filament_material_get_default_instance');
  late final _filament_material_get_default_instance =
      _filament_material_get_default_instancePtr
          .asFunction<MaterialInstanceRef Function(MaterialRef)>();

  MaterialInstanceRef filament_material_create_instance(
    MaterialRef material,
  ) {
    return _filament_material_create_instance(
      material,
    );
  }

  late final _filament_material_create_instancePtr =
      _lookup<ffi.NativeFunction<MaterialInstanceRef Function(MaterialRef)>>(
          'filament_material_create_instance');
  late final _filament_material_create_instance =
      _filament_material_create_instancePtr
          .asFunction<MaterialInstanceRef Function(MaterialRef)>();

  MaterialInstanceRef filament_material_create_instance_with_name(
    MaterialRef material,
    ffi.Pointer<ffi.Int8> name,
  ) {
    return _filament_material_create_instance_with_name(
      material,
      name,
    );
  }

  late final _filament_material_create_instance_with_namePtr = _lookup<
          ffi.NativeFunction<
              MaterialInstanceRef Function(
                  MaterialRef, ffi.Pointer<ffi.Int8>)>>(
      'filament_material_create_instance_with_name');
  late final _filament_material_create_instance_with_name =
      _filament_material_create_instance_with_namePtr.asFunction<
          MaterialInstanceRef Function(MaterialRef, ffi.Pointer<ffi.Int8>)>();

  ffi.Pointer<ffi.Int8> filament_material_get_name(
    MaterialRef material,
  ) {
    return _filament_material_get_name(
      material,
    );
  }

  late final _filament_material_get_namePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Int8> Function(MaterialRef)>>(
          'filament_material_get_name');
  late final _filament_material_get_name = _filament_material_get_namePtr
      .asFunction<ffi.Pointer<ffi.Int8> Function(MaterialRef)>();

  int filament_material_get_shading(
    MaterialRef material,
  ) {
    return _filament_material_get_shading(
      material,
    );
  }

  late final _filament_material_get_shadingPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(MaterialRef)>>(
          'filament_material_get_shading');
  late final _filament_material_get_shading =
      _filament_material_get_shadingPtr.asFunction<int Function(MaterialRef)>();

  int filament_material_get_interpolation(
    MaterialRef material,
  ) {
    return _filament_material_get_interpolation(
      material,
    );
  }

  late final _filament_material_get_interpolationPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(MaterialRef)>>(
          'filament_material_get_interpolation');
  late final _filament_material_get_interpolation =
      _filament_material_get_interpolationPtr
          .asFunction<int Function(MaterialRef)>();

  int filament_material_get_blending_mode(
    MaterialRef material,
  ) {
    return _filament_material_get_blending_mode(
      material,
    );
  }

  late final _filament_material_get_blending_modePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(MaterialRef)>>(
          'filament_material_get_blending_mode');
  late final _filament_material_get_blending_mode =
      _filament_material_get_blending_modePtr
          .asFunction<int Function(MaterialRef)>();

  int filament_material_get_refraction_mode(
    MaterialRef material,
  ) {
    return _filament_material_get_refraction_mode(
      material,
    );
  }
